components/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-ingress
  labels:
    app: home-assistant
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/backend-protocol: HTTP
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
    - host: homeassistant.192.168.1.23.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant-service
                port:
                  number: 8123
